[package]
name = "claim-sol"
version = "0.1.0"
description = "Claim SOL — Solana rent reclaim program"
edition = "2021"
rust-version = "1.75"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "claim_sol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
solana-security-txt = "1.1.2"
blake3 = "=1.4.1"  # Pin exactly — newer blake3 pulls in digest 0.11 + hybrid-array which require edition 2024